se implementó botón para reinciar el servicio sin reiniciar la raspberry pi
